2019-1/220/users/4267/executions/1647_1055.log
== TEST (2019-04-09 20:12:14) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
vo = float(input("Escreva o valor da velocidade inicial: "))
a = float(input("Escreva o valor do angulo, em graus: "))
d = float(input("Escreva o valor da distancia entre o passaro e o porco: "))

-- ERROR:
File "XXXX", line 7
    if (num % 2 == 0)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 20:13:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
vo = float(input("Escreva o valor da velocidade inicial: "))
a = float(input("Escreva o valor do angulo, em graus: "))
d = float(input("Escreva o valor da distancia entre o passaro e o porco: "))
r = ((vo**2)*(sin(2*radians(a))))/9.8
-- EXECUTION TIME:
0.165103
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1647/1055/main.py", line 7, in <module>
    r = ((vo**2)*(sin(2*radians(a))))/9.8
NameError: name 'sin' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 20:13:44) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
vo = float(input("Escreva o valor da velocidade inicial: "))
a = float(input("Escreva o valor do angulo, em graus: "))
d = float(input("Escreva o valor da distancia entre o passaro e o porco: "))
r = ((vo**2)*(sin(2*radians(a))))/9.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    r = ((vo**2)*(sin(2*radians(a))))/9.8
NameError: name 'sin' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 20:14:10) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
vo = float(input("Escreva o valor da velocidade inicial: "))
a = float(input("Escreva o valor do angulo, em graus: "))
d = float(input("Escreva o valor da distancia entre o passaro e o porco: "))
r = ((vo**2)*(sin(2*radians(a))))/9.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    r = ((vo**2)*(sin(2*radians(a))))/9.8
NameError: name 'sin' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 20:16:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
vo = float(input("Escreva o valor da velocidade inicial: "))
a = float(input("Escreva o valor do angulo, em graus: "))
d = float(input("Escreva o valor da distancia entre o passaro e o porco: "))
r = ((vo**2)*(sin(2*radians(a))))/9.8
if (abs(d-r) <= 0.1):
	print("sim")
else
	print("nao")
-- EXECUTION TIME:
0.206219
-- ERROR:
  File "/home/codebench/codes/1647/1055/main.py", line 11
    else
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 20:16:02) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
vo = float(input("Escreva o valor da velocidade inicial: "))
a = float(input("Escreva o valor do angulo, em graus: "))
d = float(input("Escreva o valor da distancia entre o passaro e o porco: "))
r = ((vo**2)*(sin(2*radians(a))))/9.8
if (abs(d-r) <= 0.1):
	print("sim")
else
	print("nao")
-- ERROR:
File "XXXX", line 11
    else
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 20:16:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
vo = float(input("Escreva o valor da velocidade inicial: "))
a = float(input("Escreva o valor do angulo, em graus: "))
d = float(input("Escreva o valor da distancia entre o passaro e o porco: "))
r = ((vo**2)*(sin(2*radians(a))))/9.8
if (abs(d-r) <= 0.1):
	print("sim")
else:
	print("nao")
-- EXECUTION TIME:
0.165047
-- TEST CASE 1:
---- input:
10.5
45.5
11.3
---- correct output:
sim
---- user output:
sim
-- TEST CASE 2:
---- input:
29.5
17.1
51.0
---- correct output:
nao
---- user output:
nao
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
